Homework4/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework4
  labels:
    app: homework4
spec:
  type: LoadBalancer
  ports:
  - name: homework4-http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: homework4-https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: homework4
